<resources>
    <string name="app_name">TodayNews</string>
    <string name="tab_home">首页</string>
    <string name="tab_business">视频</string>
    <string name="tab_mine">关注</string>
    <string name="tab_more">我的</string>
    <string name="item_text_test">曾君竹蠢货曾君竹蠢货曾君竹蠢货,曾君竹蠢货曾君竹蠢货曾君竹蠢货.曾君竹蠢货曾君竹蠢货曾君竹蠢货,曾君竹蠢货曾君竹蠢货曾君竹蠢货.</string>
    <string name="text_login">更多的登录方式</string>
    <string name="login_msg_1">登录后保存阅读习惯</string>
    <string name="login_msg_2">打造你的专属头条</string>
    <string name="login_phone">手机号</string>
    <string name="login_register">发送验证码</string>
    <string name="send_register">请发送验证码</string>
    <string name="video_play_times">%1$s次播放</string>
</resources>
