<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:scaleType="fitXY"
        android:src="@mipmap/close" />

    <TextView
        style="@style/login_tv"
        android:layout_marginTop="50dp"
        android:text="@string/login_msg_1" />

    <TextView
        style="@style/login_tv"
        android:layout_marginTop="10dp"
        android:text="@string/login_msg_2" />

    <RelativeLayout
        style="@style/login_rl"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/et_name"
            style="@style/login_et"
            android:hint="@string/login_phone"
            android:inputType="phone"
            android:maxLength="11" />

        <View
            style="@style/view_line_su"
            android:layout_alignStart="@+id/tv_register"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/et_name"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:padding="13dp"
            android:text="@string/login_register"
            android:textColor="@color/text_main" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/login_rl"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_psd"
            style="@style/login_et"
            android:hint="@string/send_register"
            android:inputType="textPassword"
            android:maxLength="20" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_tv_not_enable"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="进入头条" />

</LinearLayout>